added tls to trunk

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -18,7 +18,7 @@
 
     <script src="https://cdn.plot.ly/plotly-2.16.1.min.js"></script>
 
-    <base>
+    <base data-trunk-public-url />
 </head>
 
 <body>
