rewrite to bluma

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -2,19 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Orange PI monitoring service</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link data-trunk rel="css" href="static/css/bar.css">
     <link data-trunk rel="css" href="static/css/app.css">
-    <link data-trunk rel="scss" href="static/css/model.scss">
-    
-    <!-- UIkit CSS -->
-    <link rel="css" href="static/css/uikit.min.css" data-trunk/>
 
-    <!-- UIkit JS -->
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.19/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.19/dist/js/uikit-icons.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 
     <script src="https://cdn.plot.ly/plotly-2.16.1.min.js"></script>
 
