--- a/viewer/index.html
+++ b/viewer/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link data-trunk rel="css" href="static/css/bar.css">
     <link data-trunk rel="css" href="static/css/app.css">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link data-trunk rel="sass" href="static/sass/index.sass">
 
     <script src="https://cdn.plot.ly/plotly-2.16.1.min.js"></script>
 
