more memory properties

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -9,6 +9,8 @@
     <link data-trunk rel="css" href="static/css/app.css">
     <link data-trunk rel="sass" href="static/sass/index.sass">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css" />
+
     <script src="https://cdn.plot.ly/plotly-2.16.1.min.js"></script>
 
     <base data-trunk-public-url />
